// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check expandable form field group example against snapshot 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="title-text-id2"
    class="pf-v6-c-form__field-group pf-m-expanded"
    role="group"
  >
    <div
      class="pf-v6-c-form__field-group-toggle"
    >
      <div
        class="pf-v6-c-form__field-group-toggle-button"
      >
        <button
          aria-expanded="true"
          aria-label="toggle"
          aria-labelledby="title-text-id2 generated-id"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-1"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          id="generated-id"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-form__field-group-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 256 512"
                >
                  <path
                    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-unified"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
                  />
                </svg>
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class="pf-v6-c-form__field-group-header"
    >
      <div
        class="pf-v6-c-form__field-group-header-main"
      >
        <div
          class="pf-v6-c-form__field-group-header-title"
        >
          <div
            class="pf-v6-c-form__field-group-header-title-text"
            id="title-text-id2"
          >
            Field group 4 (non-expandable)
          </div>
        </div>
        <div
          class="pf-v6-c-form__field-group-header-description"
        >
          Field group 4 description text.
        </div>
      </div>
      <div
        class="pf-v6-c-form__field-group-header-actions"
      >
        <button
          class="pf-v6-c-button pf-m-primary"
          data-ouia-component-id="OUIA-Generated-Button-primary-2"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        />
      </div>
    </div>
    <div
      class="pf-v6-c-form__field-group-body"
    />
  </div>
</DocumentFragment>
`;

exports[`Check form field group example against snapshot 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="title-text-id1"
    class="pf-v6-c-form__field-group"
    role="group"
  >
    <div
      class="pf-v6-c-form__field-group-header"
    >
      <div
        class="pf-v6-c-form__field-group-header-main"
      >
        <div
          class="pf-v6-c-form__field-group-header-title"
        >
          <div
            class="pf-v6-c-form__field-group-header-title-text"
            id="title-text-id1"
          >
            Field group 4 (non-expandable)
          </div>
        </div>
        <div
          class="pf-v6-c-form__field-group-header-description"
        >
          Field group 4 description text.
        </div>
      </div>
      <div
        class="pf-v6-c-form__field-group-header-actions"
      >
        <button
          class="pf-v6-c-button pf-m-primary"
          data-ouia-component-id="OUIA-Generated-Button-primary-1"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        />
      </div>
    </div>
    <div
      class="pf-v6-c-form__field-group-body"
    />
  </div>
</DocumentFragment>
`;
